--- a/src/main/resources/ro/ubbcluj/map/proiectraokko4/views/login_v2.fxml
+++ b/src/main/resources/ro/ubbcluj/map/proiectraokko4/views/login_v2.fxml
@@ -10,42 +10,93 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="LoginPage" fx:controller="ro.ubbcluj.map.proiectraokko4.LoginController_v2" prefHeight="650.0" prefWidth="399.0" style="-fx-background-color: #b3b3ff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="399.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.ubbcluj.map.proiectraokko4.LoginController_v2">
    <children>
-      <ImageView layoutX="147.0" layoutY="96.0">
-         <image>
-            <Image url="@../images/icons8_male_user_104px.png" />
-         </image>
-      </ImageView>
-      <JFXTextArea fx:id="username" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="286.0" prefHeight="30.0" prefWidth="195.0" promptText="Username" unFocusColor="#abafee">
-         <font>
-            <Font name="SansSerif Regular" size="12.0" />
-         </font>
-      </JFXTextArea>
-      <JFXTextArea fx:id="password" accessibleRole="PASSWORD_FIELD" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="352.0" prefHeight="38.0" prefWidth="195.0" promptText="Password" styleClass="a" unFocusColor="#abafee">
-         <font>
-            <Font name="SansSerif Regular" size="12.0" />
-         </font>
-      </JFXTextArea>
-      <JFXCheckBox layoutX="138.0" layoutY="413.0" text="Show password" />
-      <Label layoutX="121.0" layoutY="200.0" text="Welcome" textAlignment="CENTER" textFill="#6b6a6a">
-         <font>
-            <Font name="SansSerif Regular" size="37.0" />
-         </font>
-      </Label>
-      <JFXButton buttonType="RAISED" layoutX="143.0" layoutY="473.0" onAction="#handleLoginButton" prefHeight="38.0" prefWidth="112.0" style="-fx-background-radius: 3em; -fx-border-radius: 3em; -fx-background-color: #6666ff;" text="Login" />
-      <Label layoutX="146.0" layoutY="444.0" text="Forgot password?" />
-      <Label layoutX="176.0" layoutY="618.0" text="Register" />
-      <ImageView layoutX="56.0" layoutY="289.0">
-         <image>
-            <Image url="@../images/icons8_customer_32px.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="38.0" fitWidth="32.0" layoutX="56.0" layoutY="353.0">
-         <image>
-            <Image url="@../images/icons8_lock_60px.png" />
-         </image>
-      </ImageView>
-      <Text fx:id="errorText" fill="#f85c5c" layoutX="78.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="242.0" />
+      <AnchorPane fx:id="LoginPage" layoutX="10.0" layoutY="10.0" prefHeight="650.0" prefWidth="399.0" style="-fx-background-color: #b3b3ff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView layoutX="147.0" layoutY="96.0">
+               <image>
+                  <Image url="@../images/icons8_male_user_104px.png" />
+               </image>
+            </ImageView>
+            <JFXTextArea fx:id="username" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="286.0" prefHeight="30.0" prefWidth="195.0" promptText="Username" unFocusColor="#abafee">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font>
+            </JFXTextArea>
+            <JFXTextArea fx:id="password" accessibleRole="PASSWORD_FIELD" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="352.0" onKeyTyped="#changeValue" prefHeight="38.0" prefWidth="195.0" promptText="Password" styleClass="a" unFocusColor="#abafee">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font>
+            </JFXTextArea>
+            <JFXCheckBox fx:id="VP" layoutX="138.0" layoutY="413.0" onAction="#togglevisiblePassrod" text="Show password" />
+            <Label layoutX="121.0" layoutY="200.0" text="Welcome" textAlignment="CENTER" textFill="#6b6a6a">
+               <font>
+                  <Font name="SansSerif Regular" size="37.0" />
+               </font>
+            </Label>
+            <JFXButton buttonType="RAISED" layoutX="78.0" layoutY="457.0" onAction="#handleLoginButton" prefHeight="38.0" prefWidth="229.0" style="-fx-background-radius: 3em; -fx-border-radius: 3em; -fx-background-color: #6666ff;" text="Login" />
+            <Label layoutX="152.0" layoutY="590.0" text="Forgot password?" />
+            <Label layoutX="177.0" layoutY="619.0" onMouseClicked="#handleOpenRegister" text="Register" />
+            <ImageView layoutX="56.0" layoutY="289.0">
+               <image>
+                  <Image url="@../images/icons8_customer_32px.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="38.0" fitWidth="32.0" layoutX="56.0" layoutY="353.0">
+               <image>
+                  <Image url="@../images/icons8_lock_60px.png" />
+               </image>
+            </ImageView>
+            <Text fx:id="errorText" fill="#f85c5c" layoutX="78.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="242.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="RegisterPage" layoutX="10.0" layoutY="10.0" prefHeight="650.0" prefWidth="399.0" style="-fx-background-color: #b3b3ff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView layoutX="147.0" layoutY="96.0">
+               <image>
+                  <Image url="@../images/icons8_male_user_104px.png" />
+               </image>
+            </ImageView>
+            <JFXTextArea fx:id="username1" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="411.0" prefHeight="30.0" prefWidth="195.0" promptText="Username" unFocusColor="#abafee">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font>
+            </JFXTextArea>
+            <JFXTextArea fx:id="password1" accessibleRole="PASSWORD_FIELD" focusColor="#5d84f8" labelFloat="true" layoutX="105.0" layoutY="479.0" onKeyTyped="#changeValue1" prefHeight="38.0" prefWidth="195.0" promptText="Password" styleClass="a" unFocusColor="#abafee">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font>
+            </JFXTextArea>
+            <JFXCheckBox fx:id="VP1" layoutX="148.0" layoutY="538.0" onAction="#togglevisiblePassrod1" text="Show password" />
+            <Label layoutX="121.0" layoutY="200.0" text="Welcome" textAlignment="CENTER" textFill="#6b6a6a">
+               <font>
+                  <Font name="SansSerif Regular" size="37.0" />
+               </font>
+            </Label>
+            <JFXButton buttonType="RAISED" layoutX="87.0" layoutY="576.0" onAction="#handleRegisterButton" prefHeight="38.0" prefWidth="229.0" style="-fx-background-radius: 3em; -fx-border-radius: 3em; -fx-background-color: #6666ff;" text="Register" />
+            <ImageView layoutX="56.0" layoutY="413.0">
+               <image>
+                  <Image url="@../images/icons8_customer_32px.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="38.0" fitWidth="32.0" layoutX="56.0" layoutY="479.0">
+               <image>
+                  <Image url="@../images/icons8_lock_60px.png" />
+               </image>
+            </ImageView>
+            <Text fx:id="errorText1" fill="#f85c5c" layoutX="78.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="242.0" />
+            <JFXTextArea fx:id="firstname" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="275.0" prefHeight="30.0" prefWidth="242.0" promptText="First Name" unFocusColor="#abafee">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font>
+            </JFXTextArea>
+            <JFXTextArea fx:id="lastname" focusColor="#5d84f8" labelFloat="true" layoutX="101.0" layoutY="337.0" prefHeight="30.0" prefWidth="195.0" promptText="Last Name" unFocusColor="#abafee">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font>
+            </JFXTextArea>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
